platform/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qeetmart
  labels:
    app.kubernetes.io/part-of: qeetmart
